Limit line overflow of title that caused issues in mobile

--- a/bookqlub_app/src/components/Components.css
+++ b/bookqlub_app/src/components/Components.css
@@ -146,6 +146,11 @@
 .ReviewDetailTitle {
     font-weight: 800;
     font-size: 1.3em;
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
 }
 
 .ReviewDetailValue {
